Well that didn't work

--- a/Pyber.ipynb
+++ b/Pyber.ipynb
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -247,20 +247,23 @@
     "\n",
     "#colors = (\"Yellow\", \"Blue\", \"Orange\")\n",
     "#colors = (\"inferno\", \"cividis\", \"cool\") <== won't recognize these or the ones above\n",
+    "\n",
     "#rural = city_ride_df.loc[city_ride_df.loc[\"type\"] == \"Rural\"]\n",
     "#suburban = city_ride_df.loc[city_ride_df.loc[\"type\"] == \"Suburban\"]\n",
     "#urban = city_ride_df.loc(city_ride_df.loc[\"type\"] == \"Urban\")\n",
     "\n",
     "#maybe do a function and/or zip to combine colors and city type?\n",
+    "#data = (rural, suburban, urban)\n",
     "groups = (\"Rural\", \"Suburban\", \"Urban\")\n",
-    "colors = (\"RdYlBu\")\n",
-    "#x_limit = driver\n",
-    "#x_axis = np.arange(0, driver, 1)\n",
+    "#colors = (\"RdYlBu\")\n",
+    "#colors = (\"yellow\", \"blue\", \"orange\")\n",
     "\n",
     "fig = plt.figure(facecolor='white', figsize=(10,10))\n",
     "ax = fig.add_subplot(111, aspect='equal')\n",
     "ax.grid(True)\n",
-    "scatter = ax.scatter(type_city, fare, s = driver, c=type_city, cmap=colors, alpha=0.80, label=groups)\n",
+    "#for data, colors, groups in zip(data, colors, groups):\n",
+    "scatter = ax.scatter(type_city, fare, s = driver, c=type_city, cmap=colors, alpha=0.80, label = groups)\n",
+    "    #scatter = ax.scatter(type_city, fare, s = driver, alpha=0.80)\n",
     "#scatter.set_sizes(driver)\n",
     "#scatter.set_sizes(np.ones(driver.size)*100)\n",
     "ax.axis([0, 40, 18, 45])\n",
@@ -273,6 +276,12 @@
     "plt.legend(loc=2)\n",
     "plt.show()\n",
     "\n",
+    "#data = (g1, g2, g3)\n",
+    "#colors = (\"red\", \"green\", \"blue\")\n",
+    "#groups = (\"coffee\", \"tea\", \"water\") \n",
+    "#for data, color, group in zip(data, colors, groups):\n",
+    "    #x, y = data\n",
+    "    #ax.scatter(x, y, alpha=0.8, c=color, edgecolors='none', s=30, label=group)\n",
     "#fig, ax = plt.subplots()\n",
     "#for color in ['red', 'green', 'blue']:\n",
     "    #n = 750\n",
@@ -284,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +306,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
